--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -120,17 +120,18 @@
         <div class="container py-5">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <img class="img-fluid animated pulse infinite" src="{% static 'core/img/shampoo-2.png' %}">
+                    <img class="img-fluid animated pulse infinite" src="{{list.image.url}}">
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <div class="bg-white text-center p-4">
                         <div class="border p-4">
-                            <p class="mb-2">Natural & Organic Shampoo</p>
+                            <p class="mb-2">{{list.name}}</p>
                             <h2 class="fw-bold text-uppercase mb-4">Deals of the Day</h2>
-                            <h1 class="display-4 text-primary mb-4">$99.99</h1>
-                            <h5>Fresh Organic Shampoo</h5>
-                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing
-                                elit. Etiam feugiat rutrum lectus sed auctor.</p>
+                            <h1 class="display-4 text-primary mb-4">${{list.price}}</h1>
+                            {% for benefit in list.benefit.all %}
+                                <h5>{{benefit.title}}</h5>
+                                <p class="mb-4">{{benefit.description}}</p>
+                            {% endfor %}
                             <div class="row g-0 cdt mb-4">
                                 <div class="col-3">
                                     <h1 class="display-6" id="cdt-days"></h1>
@@ -173,7 +174,7 @@
                             <small>({{product.stock}})</small>
                         </div>
                         <a href="{% url 'products' %}" class="h6 d-inline-block mb-2">{{product.name}}</a>
-                        <h5 class="text-primary mb-3">{{product.price}}</h5>
+                        <h5 class="text-primary mb-3">${{product.price}}</h5>
                     </div>
                 </div>
                 {% endfor %}
@@ -181,7 +182,6 @@
         </div>
     </div>
 <!-- Product End -->
-
 
 <!-- How To Use Start -->
     <div class="container-fluid how-to-use bg-primary my-5 py-5">
@@ -192,35 +192,20 @@
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquet, erat non malesuada consequat, nibh erat tempus risus.</p>
             </div>
             <div class="row g-5">
+                {% for htu in howuse %}
                 <div class="col-lg-4 text-center wow fadeIn" data-wow-delay="0.1s">
                     <div class="btn-square rounded-circle border mx-auto mb-4" style="width: 120px; height: 120px;">
                         <i class="fa fa-home fa-3x text-dark"></i>
                     </div>
-                    <h5 class="text-white">Wash Hair With Water</h5>
+                    <h5 class="text-white">{{htu.title}}</h5>
                     <hr class="w-25 bg-light my-2 mx-auto">
-                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquet, erat non malesuada consequat.</span>
+                    <span>{{htu.description}}</span>
                 </div>
-                <div class="col-lg-4 text-center wow fadeIn" data-wow-delay="0.3s">
-                    <div class="btn-square rounded-circle border mx-auto mb-4" style="width: 120px; height: 120px;">
-                        <i class="fa fa-home fa-3x text-dark"></i>
-                    </div>
-                    <h5 class="text-white">Apply Shampoo On Hair</h5>
-                    <hr class="w-25 bg-light my-2 mx-auto">
-                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquet, erat non malesuada consequat.</span>
-                </div>
-                <div class="col-lg-4 text-center wow fadeIn" data-wow-delay="0.5s">
-                    <div class="btn-square rounded-circle border mx-auto mb-4" style="width: 120px; height: 120px;">
-                        <i class="fa fa-home fa-3x text-dark"></i>
-                    </div>
-                    <h5 class="text-white">Wait 5 Mins And Wash</h5>
-                    <hr class="w-25 bg-light my-2 mx-auto">
-                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquet, erat non malesuada consequat.</span>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
 <!-- How To Use End -->
-
 
 <!-- Blog Start -->
     <div class="container-fluid py-5">
